# p8

./: .gitignore  README.md
asm/: CMakeLists.txt
asm/programs/: adder.asm  fib.asm  rom.asm  stack.asm
asm/src/: assembler.cpp  assembler.h  def.cpp  def.h  encoder.h  expr.cpp  expr.h  main.cpp  preprocessor.cpp  preprocessor.h  symtable.cpp  symtable.h  util.cpp  util.h
dig/: alu.dig  cwdecode.dig  datasel.dig  decode.dig  main.dig  mem.dig  regs.dig
emu/: Cargo.toml
emu/scripts/: test.p8e
emu/src/: emu.rs  fileop.rs  inst.rs  main.rs  opcode.rs  reg.rs
tool/: romgen.py
